# Qt-for-MySQL-and-university-course-design

./: README.md  office_supplies_db.sql  创建索引和视图.sql  创建表.sql  存储函数.sql  存储过程.sql  插入样本数据.sql  查询.sql  触发器.sql  设计报告.doc
OfficeSupplies_SalesSystem/: CMakeLists.txt  main.cpp  mysqltool.cpp  mysqltool.h  ossswindow.cpp  ossswindow.h  ossswindow.ui  res-image.qrc  showview_ofsql.cpp  showview_ofsql.h  showview_ofsql.ui  startwindow.cpp  startwindow.h  startwindow.ui
